使用 Colaboratory 创建

--- a/src/BSM_formula.ipynb
+++ b/src/BSM_formula.ipynb
@@ -505,7 +505,7 @@
         "\n",
         "so we have\n",
         "\n",
-        "$$\\frac{\\partial C_t}{\\partial \\sigma} = S_{t} \\sqrt{T-t} \\mathcal{N^{'}}(d_1) \\geq 0.$$\n",
+        "$$\\frac{\\partial C_t}{\\partial \\sigma} = S_{t} \\sqrt{T-t} \\frac{\\partial \\mathcal{N}(d_{1})}{\\partial d_{1}} \\geq 0.$$\n",
         "\n",
         "Then by the put-call parity, we have\n",
         "\n",
@@ -513,7 +513,7 @@
         "\n",
         "we take derivative to $\\sigma$ on the both side, \n",
         "\n",
-        "$$\\frac{\\partial C_t}{\\partial \\sigma} = \\frac{\\partial P_t}{\\partial \\sigma} = S_{t} \\sqrt{T-t} \\mathcal{N^{'}}(d_1) \\geq 0.$$\n",
+        "$$\\frac{\\partial C_t}{\\partial \\sigma} = \\frac{\\partial P_t}{\\partial \\sigma} = S_{t} \\sqrt{T-t} \\frac{\\partial \\mathcal{N}(d_{1})}{\\partial d_{1}} \\geq 0.$$\n",
         "\n",
         "Such that when volitility is increasing, the option price is also increasing."
       ]
