使用 Colaboratory 创建

--- a/src/Implied volatility BSM.ipynb
+++ b/src/Implied volatility BSM.ipynb
@@ -110,8 +110,35 @@
       },
       "source": [
         "**Proof:**\n",
+        "\n",
+        "For any $p \\in (f_{min}, f_{max})$, we denote $\\hat{\\sigma} = sup\\{t | f(x) < p, x \\in (0, t) \\}$. We have $\\hat{\\sigma} \\in (0, +\\infty)$ and $f(\\hat{\\sigma}) \\leq p$. Now we need to verify that $f(\\hat{\\sigma}) = p$.\n",
+        "\n",
+        "If $f(\\hat{\\sigma}) < p$, we consider $\\epsilon_{0} = \\frac{1}{2} (p - f(\\hat{\\sigma}))$, so $\\epsilon_{0} > 0$. Since $f$ is a continous function, then $\\exists \\delta > 0$, when $|x - \\hat{\\sigma}| < \\delta$, we have $|f(x) - f(\\delta)| < \\epsilon_{0}$. Such that\n",
+        "\n",
+        "$$f(x) < f(\\hat{\\sigma}) + \\epsilon_{0} = \\frac{1}{2}(f(\\hat{\\sigma}) + p) < p.$$\n",
+        "\n",
+        "So, $\\exists \\delta > 0$, when $\\hat{\\sigma} - \\delta < x < \\hat{\\sigma} + \\delta$, $f(x) < p$. It is contradictory with the definition of $\\hat{\\sigma}$. So we have $f(\\hat{\\sigma}) = p$.\n",
+        "\n",
+        "Suppose there have $\\sigma_{1}$ and $\\sigma_{2}$, and $f(\\sigma_{1}) = p = f(\\sigma_{2})$. Since $f$ is strictly increasing, if $\\sigma_{1} < \\sigma_{2}$, we have $f(\\sigma_{1}) < f(\\sigma_{2})$; or if $\\sigma_{1} > \\sigma_{2}$, we have $f(\\sigma_{1}) > f(\\sigma_{2})$. It is contradictory with $f(\\sigma_{1}) = f(\\sigma_{2})$. Such that we have $\\sigma_{1} = \\sigma_{2}$. \n",
+        "\n",
+        "So, there exists unique $\\hat{\\sigma}$, such that $f(\\hat{\\sigma}) = p$ and by the definition of $\\hat{\\sigma}$,\n",
+        "\n",
+        "$$\\hat{\\sigma} = \\arg\\min_{\\sigma\\in (0, + \\infty)} | f(\\sigma) - p|.$$\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "An5H6fPQMuB7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -396,6 +423,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UyjTU8FeMzIw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
