使用 Colaboratory 创建

--- a/src/Monotonicity_in_volatility.ipynb
+++ b/src/Monotonicity_in_volatility.ipynb
@@ -6,7 +6,7 @@
       "name": "Monotonicity in volatility",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0D0lLtOEKmyrvEvf+ot/q",
+      "authorship_tag": "ABX9TyM/+O2KpyX7i9CHPt/0LHcC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,11 +50,11 @@
         "\n",
         "This proposition is not right. We can give a counter example. Assume $f(x) = -x$, then $f(x)$ is a convex function since $\\forall x_{1}, x_{2} \\in \\mathbb{R}$, and $\\forall t \\in [0, 1]$, we have $f(t x_{1} + (1-t)x_{2}) \\leq t f(x_{1}) + (1-t)f(x_{2})$ holds. Then we can verify the proposotion that $g(t)$ is increasing. Since $\\forall s \\leq t$,\n",
         "\n",
-        "$$\\mathbb{E} [f(X_{t}) - f(X_{s}) | \\mathcal{F_{s}}] = \\mathbb{E}[-X_{t} + X_{s} | \\mathcal{F_{s}}] = X_{s} - \\mathbb{E}[X_{t} | \\mathcal{F_{s}}]$$\n",
+        "$$\\mathbb{E} [f(X_{t}) - f(X_{s}) | \\mathcal{F_{s}}] = \\mathbb{E}[-X_{t} + X_{s} | \\mathcal{F_{s}}] = X_{s} - \\mathbb{E}[X_{t} | \\mathcal{F_{s}}].$$\n",
         "\n",
-        "Since $X_{t}$ is a submartigale with respect to the filtration $\\{F_{t}\\}_{t \\in \\mathbb{T}}$, then. we have\n",
+        "Since $X_{t}$ is a submartigale with respect to the filtration $\\{F_{t}\\}_{t \\in \\mathbb{T}}$, then we have\n",
         "\n",
-        "$$\\mathbb{E}[X_{t} | \\mathcal{F_{s}}] \\geq X_{s}$$\n",
+        "$$\\mathbb{E}[X_{t} | \\mathcal{F_{s}}] \\geq X_{s},$$\n",
         "\n",
         "thus we know that $\\forall s \\leq t$, $\\mathbb{E} [f(X_{t}) - f(X_{s}) | \\mathcal{F_{s}}] \\leq 0$. Then we take expectation on the both side and by the definition of conditional expectation, we have\n",
         "\n",
@@ -96,11 +96,11 @@
         "\n",
         "Since $e^{-rt} S_{t}$ is a martingale with respect to the filtration $\\{F_{t}\\}_{t \\in \\mathbb{T}}$, and the function $f(x) = x^{+}$ is a convex function, then by the Jensen's inequality in the conditional expectation, we have $\\forall s \\leq t$,\n",
         "\n",
-        "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F_{s}}] \\geq (\\mathbb{E} [e^{-rt}(S_{t} - K) | \\mathcal{F_{s}}])^{+} = (e^{-rs}S_{s} - e^{-rt} K)^{+}$$\n",
+        "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F_{s}}] \\geq (\\mathbb{E} [e^{-rt}(S_{t} - K) | \\mathcal{F_{s}}])^{+} = (e^{-rs}S_{s} - e^{-rt} K)^{+},$$\n",
         "\n",
         "And we have \n",
         "\n",
-        "$$(e^{-rs}S_{s} - e^{-rt} K)^{+} = \\big((e^{-rs}(S_{s} - K) + K (e^{-rs} - e^{-rt})\\big)^{+} \\geq (e^{-rs}(S_{s} - K))^{+} $$\n",
+        "$$(e^{-rs}S_{s} - e^{-rt} K)^{+} = \\big((e^{-rs}(S_{s} - K) + K (e^{-rs} - e^{-rt})\\big)^{+} \\geq (e^{-rs}(S_{s} - K))^{+} .$$\n",
         "\n",
         "since $K (e^{-rs} -  e^{-rt}) \\geq 0$, $\\forall s \\leq t$ and $K > 0$. Thus we know that $\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F_{s}}] \\geq (e^{-rs}(S_{s} - K))^{+}$, then we take expectation on the both side, we have that\n",
         "\n",
