使用 Colaboratory 创建

--- a/src/Monotonicity_in_volatility.ipynb
+++ b/src/Monotonicity_in_volatility.ipynb
@@ -6,7 +6,7 @@
       "name": "Monotonicity in volatility",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/+O2KpyX7i9CHPt/0LHcC",
+      "authorship_tag": "ABX9TyOYHElzX6yv6nzdU6JdhYdV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,13 +50,13 @@
         "\n",
         "This proposition is not right. We can give a counter example. Assume $f(x) = -x$, then $f(x)$ is a convex function since $\\forall x_{1}, x_{2} \\in \\mathbb{R}$, and $\\forall t \\in [0, 1]$, we have $f(t x_{1} + (1-t)x_{2}) \\leq t f(x_{1}) + (1-t)f(x_{2})$ holds. Then we can verify the proposotion that $g(t)$ is increasing. Since $\\forall s \\leq t$,\n",
         "\n",
-        "$$\\mathbb{E} [f(X_{t}) - f(X_{s}) | \\mathcal{F_{s}}] = \\mathbb{E}[-X_{t} + X_{s} | \\mathcal{F_{s}}] = X_{s} - \\mathbb{E}[X_{t} | \\mathcal{F_{s}}].$$\n",
+        "$$\\mathbb{E} [f(X_{t}) - f(X_{s}) | \\mathcal{F}_{s}] = \\mathbb{E}[-X_{t} + X_{s} | \\mathcal{F}_{s}] = X_{s} - \\mathbb{E}[X_{t} | \\mathcal{F}_{s}].$$\n",
         "\n",
-        "Since $X_{t}$ is a submartigale with respect to the filtration $\\{F_{t}\\}_{t \\in \\mathbb{T}}$, then we have\n",
+        "Since $X_{t}$ is a submartigale with respect to the filtration $\\{\\mathcal{F}_{t}\\}_{t \\in \\mathbb{T}}$, then we have\n",
         "\n",
-        "$$\\mathbb{E}[X_{t} | \\mathcal{F_{s}}] \\geq X_{s},$$\n",
+        "$$\\mathbb{E}[X_{t} | \\mathcal{F}_{s}] \\geq X_{s},$$\n",
         "\n",
-        "thus we know that $\\forall s \\leq t$, $\\mathbb{E} [f(X_{t}) - f(X_{s}) | \\mathcal{F_{s}}] \\leq 0$. Then we take expectation on the both side and by the definition of conditional expectation, we have\n",
+        "thus we know that $\\forall s \\leq t$, $\\mathbb{E} [f(X_{t}) - f(X_{s}) | \\mathcal{F}_{s}] \\leq 0$. Then we take expectation on the both side and by the definition of conditional expectation, we have\n",
         "\n",
         "$$\\mathbb{E} [f(X_{t}) - f(X_{s})] \\leq 0.$$\n",
         "\n",
@@ -94,15 +94,15 @@
       "source": [
         "### **Solution:**\n",
         "\n",
-        "Since $e^{-rt} S_{t}$ is a martingale with respect to the filtration $\\{F_{t}\\}_{t \\in \\mathbb{T}}$, and the function $f(x) = x^{+}$ is a convex function, then by the Jensen's inequality in the conditional expectation, we have $\\forall s \\leq t$,\n",
+        "Since $e^{-rt} S_{t}$ is a martingale with respect to the filtration $\\mathcal{F}_{t}\\}_{t \\in \\mathbb{T}}$, and the function $f(x) = x^{+}$ is a convex function, then by the Jensen's inequality in the conditional expectation, we have $\\forall s \\leq t$,\n",
         "\n",
-        "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F_{s}}] \\geq (\\mathbb{E} [e^{-rt}(S_{t} - K) | \\mathcal{F_{s}}])^{+} = (e^{-rs}S_{s} - e^{-rt} K)^{+},$$\n",
+        "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F}_{s}] \\geq (\\mathbb{E} [e^{-rt}(S_{t} - K) | \\mathcal{F}_{s}])^{+} = (e^{-rs}S_{s} - e^{-rt} K)^{+},$$\n",
         "\n",
         "And we have \n",
         "\n",
         "$$(e^{-rs}S_{s} - e^{-rt} K)^{+} = \\big((e^{-rs}(S_{s} - K) + K (e^{-rs} - e^{-rt})\\big)^{+} \\geq (e^{-rs}(S_{s} - K))^{+} .$$\n",
         "\n",
-        "since $K (e^{-rs} -  e^{-rt}) \\geq 0$, $\\forall s \\leq t$ and $K > 0$. Thus we know that $\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F_{s}}] \\geq (e^{-rs}(S_{s} - K))^{+}$, then we take expectation on the both side, we have that\n",
+        "since $K (e^{-rs} -  e^{-rt}) \\geq 0$, $\\forall s \\leq t$ and $K > 0$. Thus we know that $\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F}_{s}] \\geq (e^{-rs}(S_{s} - K))^{+}$, then we take expectation on the both side, we have that\n",
         "\n",
         "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+}] \\geq \\mathbb{E} [(e^{-rs}(S_{s} - K))^{+}].$$\n",
         "\n",
@@ -138,15 +138,15 @@
         "colab_type": "text"
       },
       "source": [
-        "Since $ S_{t}$ is a martingale with respect to the filtration $\\{F_{t}\\}_{t \\in \\mathbb{T}}$, we have $\\forall s \\leq t$,\n",
+        "Since $ S_{t}$ is a martingale with respect to the filtration $\\{\\mathcal{F}_{t}\\}_{t \\in \\mathbb{T}}$, we have $\\forall s \\leq t$,\n",
         "\n",
-        "$$\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}| \\mathcal{F_{s}}] = \\mathbb{E} [(S_{t} - K)^{-}| \\mathcal{F_{s}}] - (S_{s} - K)^{-} = (K - S_{s}) \\mathbb{1}_{\\{S_{t} < K\\}} - (K - S_{s})^{+},$$\n",
+        "$$\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}| \\mathcal{F}_{s}] = \\mathbb{E} [(S_{t} - K)^{-}| \\mathcal{F}_{s}] - (S_{s} - K)^{-} = (K - S_{s}) \\mathbb{1}_{\\{S_{t} < K\\}} - (K - S_{s})^{+},$$\n",
         "\n",
         "then we have\n",
         "\n",
         "$$\n",
         "\\begin{equation}\n",
-        "\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}| \\mathcal{F_{s}}] = \n",
+        "\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}| \\mathcal{F}_{s}] = \n",
         "\\begin{cases}\n",
         "K - S_{s} - (K - S_{s})^{+}, \\quad  S_{t} < K \\\\\n",
         "- (K - S_{s})^{+}, \\quad S_{t} \\geq K\n",
@@ -170,21 +170,21 @@
         "\n",
         "**solution 2:**\n",
         "\n",
-        "Or we can just verify the relationship between $\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F_{s}}]$ and $(S_{s} - K)^{-}$.\n",
+        "Or we can just verify the relationship between $\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}]$ and $(S_{s} - K)^{-}$.\n",
         "\n",
         "If $S_{t} > K$,\n",
         "\n",
-        "$$\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F_{s}}] = 0 \\leq (S_{s} - K)^{-}.$$\n",
+        "$$\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}] = 0 \\leq (S_{s} - K)^{-}.$$\n",
         "\n",
         "If $S_{t} \\leq K$,\n",
         "\n",
-        "$$\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F_{s}}] = K - S_{s}\\leq (S_{s} - K)^{-}.$$\n",
+        "$$\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}] = K - S_{s}\\leq (S_{s} - K)^{-}.$$\n",
         "\n",
-        "Thus we have $\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F_{s}}] \\leq (S_{s} - K)^{-}$. Taking expectation on the both side, we have\n",
+        "Thus we have $\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}] \\leq (S_{s} - K)^{-}$. Taking expectation on the both side, we have\n",
         "\n",
         "$$\\mathbb{E} [(S_{t} - K)^{-}] \\leq \\mathbb{E} [(S_{s} - K)^{-}].$$\n",
         "\n",
-        "So we know that $\\forall s \\leq t$, $P(t) \\leq P(x)$, then $P(t)$ is decreasing.\n"
+        "So we know that $\\forall s \\leq t$, $P(t) \\leq P(s)$, then $P(t)$ is decreasing.\n"
       ]
     }
   ]
