使用 Colaboratory 创建

--- a/src/Monotonicity in volatility.ipynb
+++ b/src/Monotonicity in volatility.ipynb
@@ -6,7 +6,7 @@
       "name": "Monotonicity in volatility",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNXyiZSxqOJQYY3l0TYDLhZ",
+      "authorship_tag": "ABX9TyPQxaTBflSq94lQYyfaSulT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,25 +145,25 @@
         "then we have\n",
         "\n",
         "$$\n",
-        "\\begin{equation}\n",
+        "\\begin{equation*}\n",
         "\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}| \\mathcal{F}_{s}] = \n",
         "\\begin{cases}\n",
         "K - S_{s} - (K - S_{s})^{+}, \\quad  S_{t} < K \\\\\n",
         "- (K - S_{s})^{+}, \\quad S_{t} \\geq K\n",
         "\\end{cases}\n",
-        "\\end{equation}\n",
+        "\\end{equation*}\n",
         "$$\n",
         "\n",
         "Then take expectation on the both side, we have\n",
         "\n",
         "$$\n",
-        "\\begin{equation}\n",
+        "\\begin{equation*}\n",
         "\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}] = \n",
         "\\begin{cases}\n",
         "\\mathbb{E} [K - S_{s} - (K - S_{s})^{+}], \\quad  S_{t} < K \\\\\n",
         "\\mathbb{E}[- (K - S_{s})^{+}], \\quad S_{t} \\geq K\n",
         "\\end{cases}\n",
-        "\\end{equation}\n",
+        "\\end{equation*}\n",
         "$$\n",
         "\n",
         "since $K - S_{s} - (K - S_{s})^{+} \\leq 0$ and $- (K - S_{s})^{+} \\leq 0$, then we have $\\forall s \\leq t$,$\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}] \\leq 0$, thus $P(t) \\leq P(s)$. So, we proved that $P(t)$ is decreasing.\n",
