使用 Colaboratory 创建

--- a/src/Monotonicity in volatility.ipynb
+++ b/src/Monotonicity in volatility.ipynb
@@ -6,7 +6,7 @@
       "name": "Monotonicity in volatility",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQxaTBflSq94lQYyfaSulT",
+      "authorship_tag": "ABX9TyOMNu9/8AubqSWzAp1K1I/y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,21 @@
         "\n",
         "$$\\mathbb{E} [f(X_{t}) - f(X_{s})] \\leq 0.$$\n",
         "\n",
-        "Then we know that $\\forall s \\leq t$, $g(t) \\leq g(s)$, such that $g(t)$ is decreasing almost everywhere."
+        "Then we know that $\\forall s \\leq t$, $g(t) \\leq g(s)$, such that $g(t)$ is decreasing almost everywhere.\n",
+        "\n",
+        "If we know $f$ is a increasing function, then by the Jensen's inequality, we have for all $s \\leq t$,\n",
+        "\n",
+        "$$\\mathbb{E} [f(X_{t}) | \\mathcal{F}_{s}] \\geq f(\\mathbb{E} [X_{t} | \\mathcal{F}_{s}]),$$\n",
+        "\n",
+        "and since $X_{t}$ is a submartingale, we have $\\mathbb{E} [X_{t} | \\mathcal{F}_{s}] \\geq X_{s}$. As $f$ is a increasing function, then\n",
+        "\n",
+        "$$\\mathbb{E} [f(X_{t}) | \\mathcal{F}_{s}] \\geq f(\\mathbb{E} [X_{t} | \\mathcal{F}_{s}]) \\geq f(X_{s}),$$\n",
+        "\n",
+        "by taking expectation on the both side, we have\n",
+        "\n",
+        "$$\\mathbb{E} [f(X_{t})] \\geq \\mathbb{E} [f(X_{s})], \\forall s \\leq t.$$\n",
+        "\n",
+        "Then we know $g(t)$ is increasing."
       ]
     },
     {
@@ -96,13 +110,13 @@
         "\n",
         "Since $e^{-rt} S_{t}$ is a martingale with respect to the filtration $\\{\\mathcal{F}_{t}\\}_{t \\in \\mathbb{T}}$, and the function $f(x) = x^{+}$ is a convex function, then by the Jensen's inequality in the conditional expectation, we have $\\forall s \\leq t$,\n",
         "\n",
-        "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F}_{s}] \\geq (\\mathbb{E} [e^{-rt}(S_{t} - K) | \\mathcal{F}_{s}])^{+} = (e^{-rs}S_{s} - e^{-rt} K)^{+},$$\n",
+        "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F}_{s}] \\geq (\\mathbb{E} [e^{-rt}(S_{t} - K) | \\mathcal{F}_{s}])^{+} = (e^{-rs}S_{s} - e^{-rt} K)^{+}.$$\n",
         "\n",
         "And we have \n",
         "\n",
         "$$(e^{-rs}S_{s} - e^{-rt} K)^{+} = \\big((e^{-rs}(S_{s} - K) + K (e^{-rs} - e^{-rt})\\big)^{+} \\geq (e^{-rs}(S_{s} - K))^{+} .$$\n",
         "\n",
-        "since $K (e^{-rs} -  e^{-rt}) \\geq 0$, $\\forall s \\leq t$ and $K > 0$. Thus we know that $\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F}_{s}] \\geq (e^{-rs}(S_{s} - K))^{+}$, then we take expectation on the both side, we have that\n",
+        "since $K (e^{-rs} -  e^{-rt}) \\geq 0$, $\\forall s \\leq t$ and $K > 0$. Thus we know that $\\mathbb{E} [e^{-rt}(S_{t} - K)^{+} | \\mathcal{F}_{s}] \\geq (e^{-rs}(S_{s} - K))^{+}$, then we know that $e^{-rt}(S_{t} - K)^{+}$ is a submartingale, by taking expectation on the both side, we have that\n",
         "\n",
         "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+}] \\geq \\mathbb{E} [(e^{-rs}(S_{s} - K))^{+}].$$\n",
         "\n",
@@ -138,53 +152,16 @@
         "colab_type": "text"
       },
       "source": [
-        "Since $ S_{t}$ is a martingale with respect to the filtration $\\{\\mathcal{F}_{t}\\}_{t \\in \\mathbb{T}}$, we have $\\forall s \\leq t$,\n",
+        "Since $ S_{t}$ is a martingale with respect to the filtration $\\{\\mathcal{F}_{t}\\}_{t \\in \\mathbb{T}}$, and the function $f(x) = x^{-}$ is a convex function, then by the Jensen's inequality in the conditional expectation, we have $\\forall s \\leq t$,\n",
         "\n",
-        "$$\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}| \\mathcal{F}_{s}] = \\mathbb{E} [(S_{t} - K)^{-}| \\mathcal{F}_{s}] - (S_{s} - K)^{-} = (K - S_{s}) \\mathbb{1}_{\\{S_{t} < K\\}} - (K - S_{s})^{+},$$\n",
+        "$$\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}] \\geq (\\mathbb{E} [S_{t} - K | \\mathcal{F}_{s}])^{-} = (S_{s} - K)^{-},$$\n",
         "\n",
-        "then we have\n",
+        "then we know that $(S_{t} - K)^{-}$ is a submartingale. Taking expectation on the both side, we have for all $s \\leq t$,\n",
         "\n",
-        "$$\n",
-        "\\begin{equation*}\n",
-        "\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}| \\mathcal{F}_{s}] = \n",
-        "\\begin{cases}\n",
-        "K - S_{s} - (K - S_{s})^{+}, \\quad  S_{t} < K \\\\\n",
-        "- (K - S_{s})^{+}, \\quad S_{t} \\geq K\n",
-        "\\end{cases}\n",
-        "\\end{equation*}\n",
-        "$$\n",
+        "$$\\mathbb{E} [(S_{t} - K)^{-} ] \\geq \\mathbb{E} [(S_{s} - K)^{-}].$$\n",
         "\n",
-        "Then take expectation on the both side, we have\n",
-        "\n",
-        "$$\n",
-        "\\begin{equation*}\n",
-        "\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}] = \n",
-        "\\begin{cases}\n",
-        "\\mathbb{E} [K - S_{s} - (K - S_{s})^{+}], \\quad  S_{t} < K \\\\\n",
-        "\\mathbb{E}[- (K - S_{s})^{+}], \\quad S_{t} \\geq K\n",
-        "\\end{cases}\n",
-        "\\end{equation*}\n",
-        "$$\n",
-        "\n",
-        "since $K - S_{s} - (K - S_{s})^{+} \\leq 0$ and $- (K - S_{s})^{+} \\leq 0$, then we have $\\forall s \\leq t$,$\\mathbb{E} [(S_{t} - K)^{-} - (S_{s} - K)^{-}] \\leq 0$, thus $P(t) \\leq P(s)$. So, we proved that $P(t)$ is decreasing.\n",
-        "\n",
-        "**solution 2:**\n",
-        "\n",
-        "Or we can just verify the relationship between $\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}]$ and $(S_{s} - K)^{-}$.\n",
-        "\n",
-        "If $S_{t} > K$,\n",
-        "\n",
-        "$$\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}] = 0 \\leq (S_{s} - K)^{-}.$$\n",
-        "\n",
-        "If $S_{t} \\leq K$,\n",
-        "\n",
-        "$$\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}] = K - S_{s}\\leq (S_{s} - K)^{-}.$$\n",
-        "\n",
-        "Thus we have $\\mathbb{E} [(S_{t} - K)^{-} | \\mathcal{F}_{s}] \\leq (S_{s} - K)^{-}$. Taking expectation on the both side, we have\n",
-        "\n",
-        "$$\\mathbb{E} [(S_{t} - K)^{-}] \\leq \\mathbb{E} [(S_{s} - K)^{-}].$$\n",
-        "\n",
-        "So we know that $\\forall s \\leq t$, $P(t) \\leq P(s)$, then $P(t)$ is decreasing.\n"
+        "So, $P(t)$ is increasing.\n",
+        "\n"
       ]
     }
   ]
