使用 Colaboratory 创建

--- a/src/Monotonicity in volatility.ipynb
+++ b/src/Monotonicity in volatility.ipynb
@@ -6,7 +6,7 @@
       "name": "Monotonicity in volatility",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOMNu9/8AubqSWzAp1K1I/y",
+      "authorship_tag": "ABX9TyOlzK1uM9Zp7ehxCua2m0UU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,7 @@
         "\n",
         "$$\\mathbb{E} [f(X_{t}) - f(X_{s})] \\leq 0.$$\n",
         "\n",
-        "Then we know that $\\forall s \\leq t$, $g(t) \\leq g(s)$, such that $g(t)$ is decreasing almost everywhere.\n",
+        "Then we know that $\\forall s \\leq t$, $g(t) \\leq g(s)$, so that we have $g(t)$ is decreasing almost everywhere.\n",
         "\n",
         "If we know $f$ is a increasing function, then by the Jensen's inequality, we have for all $s \\leq t$,\n",
         "\n",
@@ -120,7 +120,7 @@
         "\n",
         "$$\\mathbb{E} [e^{-rt}(S_{t} - K)^{+}] \\geq \\mathbb{E} [(e^{-rs}(S_{s} - K))^{+}].$$\n",
         "\n",
-        "Such that $\\forall s \\leq t$, we have $C(s) \\leq C(t)$, then $C(t)$ is increasing."
+        "So, $\\forall s \\leq t$, we have $C(s) \\leq C(t)$, then $C(t)$ is increasing."
       ]
     },
     {
