使用 Colaboratory 创建

--- a/src/Monte_Carlo_method_to_estimate_pi.ipynb
+++ b/src/Monte_Carlo_method_to_estimate_pi.ipynb
@@ -6,7 +6,7 @@
       "name": "Monte Carlo method to estimate \\pi",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfr8IdtjeRyb6Ubc7SFneP",
+      "authorship_tag": "ABX9TyM+xworwbHP4puGTjhmf/ue",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -394,6 +394,8 @@
         "### **Solution:**\n",
         "\n",
         "![Psuedocode](https://github.com/JiaminJIAN/20MA573/blob/master/src/pseudocode_HW5.png)\n",
+        "\n",
+        "[Psuedocode](https://github.com/JiaminJIAN/20MA573/blob/master/src/pseudocode_HW5.png)\n",
         "\n",
         "Firstly we design the function to estimate the MSE."
       ]
