使用 Colaboratory 创建

--- a/src/SDE_models.ipynb
+++ b/src/SDE_models.ipynb
@@ -6,7 +6,7 @@
       "name": "SDE models",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP1iONOCsPuZQ1sTibWsdDC",
+      "authorship_tag": "ABX9TyM/USiMrrnMnaAUkK61tolO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "\n",
         "Since $dS_{t} = \\mu S_{t} \\, d t + \\sigma S_{t} \\, d W_{t}$, by Itô's lemma, we have\n",
         "\n",
-        "$$d \\ln S_{t} = \\Big{[}0 + \\mu S_{t} \\frac{1}{S_{t}} + \\frac{1}{2} \\sigma^{2} S_{t}^{2}(- \\frac{1}{S_{t}^{2}}) \\Big{]} \\, d t + \\sigma S_{t} \\frac{1}{S_{t}} \\, d W_{t},$$ \n",
+        "$$d \\ln S_{t} = \\Big[ 0 + \\mu S_{t} \\frac{1}{S_{t}} + \\frac{1}{2} \\sigma^{2} S_{t}^{2}(- \\frac{1}{S_{t}^{2}}) \\Big ]  \\, d t + \\sigma S_{t} \\frac{1}{S_{t}} \\, d W_{t},$$ \n",
         "\n",
         "then we know that\n",
         "\n",
