--- a/src/Finite_difference_method_on_ODE.ipynb
+++ b/src/Finite_difference_method_on_ODE.ipynb
@@ -6,7 +6,7 @@
       "name": "Finite difference method on ODE",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPX/EzOqxXb8WIhGFeFiNjp",
+      "authorship_tag": "ABX9TyM9wbtzR1fZlwwsdbuQNGaW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,9 +49,9 @@
         "Instead of FEM, we are going to discuss CFD solution of the above ODE. Answer the following questions:\n",
         "\n",
         "(i) Prove that\n",
-        "\\begin{equation*}\n",
+        "\\begin{equation}\n",
         "    u(x) = x - \\frac{\\exp (\\frac{x-1}{\\sqrt{\\epsilon}}) - \\exp (- \\frac{x+1}{\\sqrt{\\epsilon}})}{1 - \\exp(- \\frac{2}{\\sqrt{\\epsilon}})}\n",
-        "\\end{equation*}\n",
+        "\\end{equation}\n",
         "is the unique solution.\n",
         "\n",
         "(ii) Using CFD on above ODE, find out the matrix $L^{h}$ and vector $R^{h}f$, such that the numerical solution satisfies $L^{h}u^{h} = R^{h}f$.\n",
