--- a/src/MC_and_TD_for_nd_BVP.ipynb
+++ b/src/MC_and_TD_for_nd_BVP.ipynb
@@ -6,7 +6,7 @@
       "name": "MC and TD for nd BVP",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSjBHpx+jVgkaurLId2zBc",
+      "authorship_tag": "ABX9TyPEIHHL9rKmuQQ4upZpfN2F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -245,8 +245,8 @@
         "            \n",
         "    drift = lambda self,s,a: [a1*0 for a1 in a]\n",
         "    \n",
-        "    run_cost = lambda self,s,a: (sum([(s1-0.5)**2 - self.n_dim for s1 in s]) + sum([a1*0 for a1 in a]))\n",
-        "    \n",
+        "    run_cost = lambda self,s,a: sum([(s1-0.5)**2 - self.n_dim for s1 in s])\n",
+        "\n",
         "    term_cost = lambda self,s: sum([(s1-0.5)**2 for s1 in s]) \n",
         "    exact_soln = lambda self,s: sum([(s1-0.5)**2 for s1 in s]) \n"
       ],
@@ -479,11 +479,11 @@
       "metadata": {
         "id": "mN7-XP2TyRi4",
         "colab_type": "code",
+        "outputId": "dc1918a7-409c-4296-a307-1aa7335390b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 401
-        },
-        "outputId": "1f1c9d6a-3f6a-4ada-dae4-c10335f776e9"
+        }
       },
       "source": [
         "## check the value iteration method in 1-d\n",
@@ -512,7 +512,7 @@
             ">>> n_dim: 1\n",
             ">>> domain: [0, 1]\n",
             ">>> n_mesh: 8 totn_mesh: 8\n",
-            ">>>elapsed time: 0.02425384521484375\n",
+            ">>>elapsed time: 0.019292831420898438\n",
             ">>>running err:8.436658739836725e-06\n",
             ">>>number of iterations: 11\n"
           ],
@@ -545,11 +545,11 @@
       "metadata": {
         "id": "3mnrEBEj3b6Q",
         "colab_type": "code",
+        "outputId": "9adfb50e-f37f-4daa-dd6f-3542155cea14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bf00b88a-f37e-4589-b22f-91d90d5c79dc"
+        }
       },
       "source": [
         " ## Get the L2 exact error of 1-d\n",
@@ -581,11 +581,11 @@
       "metadata": {
         "id": "KtN1qtKY92uf",
         "colab_type": "code",
+        "outputId": "7565ae33-f803-444a-b768-d1680a05b71d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
-        },
-        "outputId": "8868c183-f09e-4bf6-e971-8a3baba5e936"
+        }
       },
       "source": [
         "## check the value iteration method in 2-d\n",
@@ -614,7 +614,7 @@
             ">>> n_dim: 2\n",
             ">>> domain: [0, 1]\n",
             ">>> n_mesh: 8 totn_mesh: 8\n",
-            ">>>elapsed time: 6.902123689651489\n",
+            ">>>elapsed time: 6.679088115692139\n",
             ">>>running err:9.617557535452535e-06\n",
             ">>>number of iterations: 20\n"
           ],
@@ -647,11 +647,11 @@
       "metadata": {
         "id": "aPfR-q16DnqO",
         "colab_type": "code",
+        "outputId": "7a435b9f-8070-4daf-b9d4-98dcd09f9753",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ecb81e42-bf92-4596-c6a9-6a0f75fee71c"
+        }
       },
       "source": [
         "## Get the L2 exact error \n",
@@ -684,11 +684,11 @@
       "metadata": {
         "id": "1oCGwJkFOCNU",
         "colab_type": "code",
+        "outputId": "ce3e131e-4035-4bc8-9ed1-dad40baf8390",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 367
-        },
-        "outputId": "fdc93ef6-4e9e-4dc8-a5fc-a0cc24775a9e"
+        }
       },
       "source": [
         "## check the Monte-carlo method in 1-d\n",
@@ -714,7 +714,7 @@
             ">>> n_dim: 1\n",
             ">>> domain: [0, 1]\n",
             ">>> n_mesh: 8 totn_mesh: 8\n",
-            ">>>elapsed time: 1.4998884201049805\n"
+            ">>>elapsed time: 1.4375331401824951\n"
           ],
           "name": "stdout"
         },
@@ -745,11 +745,11 @@
       "metadata": {
         "id": "Xid4DiWaOfuT",
         "colab_type": "code",
+        "outputId": "3b32a0e7-f50d-4a9d-eaff-9769873bb78d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "053d6760-244f-43f4-b37d-836658dda00c"
+        }
       },
       "source": [
         "err3 = 0.\n",
