--- a/src/Finite_Difference_Method.ipynb
+++ b/src/Finite_Difference_Method.ipynb
@@ -685,9 +685,9 @@
         "\n",
         "$$f(x-h) = f(x) - f'(x) h + \\frac{1}{2} f''(x) h^{2} - \\frac{1}{3!} f^{(3)}(x) h^{3} + O(h^{4}), $$\n",
         "\n",
-        "such that\n",
+        "so we have\n",
         "\n",
-        "$$f(x+h) + f(x-h) -2f(x)= f''(x) h^{2} +O(h^{2}).$$\n",
+        "$$f(x+h) + f(x-h) -2f(x)= f''(x) h^{2} +O(h^{4}).$$\n",
         "\n",
         "So by the definition of second order central finite different, we have\n",
         "\n",
@@ -716,7 +716,7 @@
         "\n",
         "$$f(x-h) = \\sum_{k = 0}^{+ \\infty} \\frac{f^{(k)}(x)}{k!} (-h)^{k},$$\n",
         "\n",
-        "such that\n",
+        "so we can get\n",
         "\n",
         "$$f(x+h) + f(x-h) =  \\sum_{k = 0}^{+ \\infty} \\frac{f^{(k)}(x)}{k!} \\Big(h^{k} + (-h)^{k} \\Big) = 2 \\sum_{n = 0}^{+ \\infty} \\frac{f^{(2n)}(x)}{(2n)!} h^{2n}.$$\n",
         "\n",
@@ -734,7 +734,7 @@
         "\n",
         "$$f^{(2k)} (x) = sin(k \\pi + x) = 0,$$\n",
         "\n",
-        "such that\n",
+        "so we know that\n",
         "\n",
         "$$\\delta_{h} \\delta_{-h} f(x) - f''(x) = 0.$$\n"
       ]
