--- a/src/Problem_1.ipynb
+++ b/src/Problem_1.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Problem 1",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMwiHfRBsgDi853ajsBJHr6",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/JiaminJIAN/20MA573/blob/master/src/Problem_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -66,7 +78,79 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "(2) Write a python code and implement it.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xOs0JTx26zJt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "from scipy.stats import bernoulli"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7-P-ScQY69Aj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def circle(N):\n",
+        "  p = 0\n",
+        "  for i in range(N):\n",
+        "    x = np.zeros(3)\n",
+        "    y = np.zeros(3)\n",
+        "    for j in range(3):\n",
+        "      x[j] = np.random.uniform(low=-1, high=1) \n",
+        "      y[j] = np.sqrt(1 - x[j]**2) * (2 * bernoulli.rvs(0.5) - 1)\n",
+        "    a = (x[0]-x[1])**2 + (y[0]-y[1])**2\n",
+        "    b = (x[1]-x[2])**2 + (y[1]-y[2])**2\n",
+        "    c = (x[0]-x[2])**2 + (y[0]-y[2])**2\n",
+        "    if a+b-c>0 and a+c-b>0 and b+c-a>0:\n",
+        "      p = p + 1\n",
+        "  return p/N"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oQ4qO7Qs9pSf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "5475b526-b3e5-47b0-bc7c-3e73ea448076"
+      },
+      "source": [
+        "circle(10000)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.2495"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
       ]
     },
     {
